Added mcpc-plus fix